Refactor project